[package]
name = "ignore_cli"
version = "0.1.0"
authors = ["Andrew Colannino <akc8012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
reqwest = { version = "0.10.4", features = ["blocking"] }
