[package]
name = "clignore"
version = "0.1.0"
description = "Simple CLI tool to find .gitignore files based on your language or framework"
authors = ["Andrew Colannino <akc8012@gmail.com>"]
homepage = "https://github.com/akc8012/clignore"
repository = "https://github.com/akc8012/clignore"
documentation = "https://github.com/akc8012/clignore/blob/master/README.md"
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["git", "gitignore", "github", "cli"]
categories = ["command-line-utilities", "development-tools"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
base64 = "0.12.0"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.4"
tempfile = "3.1.0"
